--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "gulp build",
     "style:lint": "stylelint 'src/app/styles/**/*.scss' --syntax scss",
     "style:fix": "stylelint 'src/app/styles/**/*.scss' --syntax scss --fix",
-    "predeploy": "npm run build",
+    "predeploy": "gulp build",
     "deploy": "gh-pages -d dist"
   },
   "author": {
@@ -22,30 +22,39 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.27.5",
     "del": "^6.0.0",
+    "fibers": "^5.0.0",
     "gh-pages": "^3.2.3",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-csso": "^3.0.1",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-csso": "^4.0.1",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-load-plugins": "^2.0.1",
-    "gulp-purgecss": "^1.2.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-svgstore": "^7.0.1",
-    "gulp-terser": "^1.2.0",
+    "gulp-purgecss": "^4.0.3",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svgstore": "^8.0.0",
+    "gulp-terser": "^2.0.1",
     "gulp-tinypng-web": "^1.0.1",
     "gulp-webp": "^4.0.1",
-    "stylelint": "^11.1.1",
-    "stylelint-config-htmlacademy": "^0.1.4",
+    "node-sass-tilde-importer": "^1.0.2",
+    "sass": "^1.39.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-htmlacademy": "^0.1.10",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-order": "^3.1.1"
+    "stylelint-order": "^4.1.0"
   },
-  "browserslist": [
-    "last 4 version",
-    "> 2%"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
