upd yarn to v.3, refactor styles task, add prettier

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
 .DS_Store
 .idea
-*.ai
-*.psd
-*.pdf
+
 *.log
 npm-debug.*
 node_modules/
 .sass-cache/
 *.map
+
+#Project generated folders
 .tmp
 dist
+
+#Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
