--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "infinite-selection",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "type": "module",
   "main": "gulpfile.mjs",
@@ -22,15 +22,17 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.3.4",
     "browser-sync": "^2.27.5",
+    "cssnano": "^5.0.8",
     "del": "^6.0.0",
     "fibers": "^5.0.0",
     "gh-pages": "^3.2.3",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-csso": "^4.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-file-include": "^2.3.0",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-purgecss": "^4.0.3",
+    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
@@ -39,6 +41,8 @@
     "gulp-tinypng-web": "^1.0.1",
     "gulp-webp": "^4.0.1",
     "node-sass-tilde-importer": "^1.0.2",
+    "postcss": "^8.3.6",
+    "prettier": "^2.3.2",
     "sass": "^1.39.0",
     "stylelint": "^13.13.1",
     "stylelint-config-htmlacademy": "^0.1.10",
