--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
     "es2017": true
   },
   "root": true,
-  "ignorePatterns": ["dist", "projects/**/*", ".tmp", "gulp"],
+  "ignorePatterns": ["dist", "projects/**/*", ".tmp", "gulp", "db"],
   // Плагин с наборами правил для TypeScript
   "plugins": ["@typescript-eslint", "prettier"],
   // Наборы правил
