--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "fibers": "^5.0.0",
     "gh-pages": "^3.2.3",
     "gulp": "^4.0.2",
+    "gulp-cheerio": "^1.0.0",
     "gulp-clean-css": "^4.3.0",
+    "gulp-compile-handlebars": "^0.6.1",
     "gulp-esbuild": "^0.8.6",
-    "gulp-file-include": "^2.3.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
