--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-esbuild": "^0.8.6",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
